updated image size (see pics ending in numbers), and edited background

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,2 +1,10 @@
-
-
+body {
+    height: 100vh;
+    background: repeating-linear-gradient(
+      to right,
+      #ffcb05 ,
+      #2a75bb ,
+      #c7a008 ,
+      #3c5aa6 
+    );
+  }
