commented grid out since it's affecting on how the images should look like on screen

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,12 +8,13 @@ body {
     #3C5AA6
   );
 }
-.grid {
+/* .grid {
   display: flex;
   flex-wrap: wrap;
   height: 300px;
   width: 4000px;
-}
+} */
 .hidden {
   display: none;
 }
+
