--- a/styles/style.css
+++ b/styles/style.css
@@ -8,13 +8,15 @@ body {
     #3C5AA6
   );
 }
-/* .grid {
-  display: flex;
-  flex-wrap: wrap;
-  height: 300px;
-  width: 4000px;
-} */
+
 .hidden {
   display: none;
 }
 
+.grid {
+  width: 430px;
+  padding: 10px;
+  border: 5px solid gray;
+  margin: 0;
+  margin-left: 500px;
+}
